# docker-mcp

./: .gitignore  README.md  pyproject.toml
src/docker_mcp/: docker_executor.py  handlers.py  server.py
