[project]
name = "docker-mcp"
version = "0.1.0"
description = "A docker MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-on-whales>=0.67.0",
    "pyyaml>=6.0.1"
]

[[project.authors]]
name = "Alex Andru"
email = "alex007d@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
docker-mcp = "docker_mcp:main"